      generation of a working tree in the new branch.
      (Daniel Watkins, John Klinger, #273993)

  BUG FIXES:

    * ``bzr unshelve`` gives a more palatable error if passed a non-integer
      shelf id. (Daniel Watkins)

  DOCUMENTATION:

    * The documentation for ``shelve`` and ``unshelve`` has been clarified.
      (Daniel Watkins, #327421, #327425)

  API CHANGES:

  INTERNALS:


bzr 1.12rc1 "1234567890" 2009-02-10
-----------------------------------

This release of Bazaar contains many improvements to the speed and
functionality of ``bzr log`` and the display of logged revisions by ``bzr
status``.  bzr now also gives a better indication of progress, both in the
way operations are drawn onto a text terminal, and by showing the rate of
network IO.

  COMPATIBILITY BREAKS:

    * By default, ``bzr status`` after a merge now shows just the pending
      merge tip revisions. This improves the signal-to-noise ratio after
      merging from trunk and completes much faster. To see all merged
      revisions, use the new ``-v`` flag.  (Ian Clatworthy)

    * ``bzr log --line`` now shows any tags after the date and before
      the commit message. If you have scripts which parse the output
      from this command, you may need to adjust them accordingly.
      (Ian Clatworthy)

    * ``bzr log --short`` now shows any additional revision properties
      after the date and before the commit message.  Scripts that parse 
      output of the log command in this situation may need to adjust.
      (Neil Martinsen-Burrell)

    * The experimental formats ``1.12-preview`` and ``1.12-preview-rich-root``
      have been renamed ``development-wt5`` and ``development-wt5-rich-root``
      respectively, given they are not ready for release in 1.12.
      (Ian Clatworthy)

  NEW FEATURES:

    * Add support for filtering ``bzr missing`` on revisions.  Remote revisions
      can be filtered using ``bzr missing -r -20..-10`` and local revisions can